# Information-Retrieval

./: hw0-2.sh
hw0/: hw0-1.sh  simple.txt  tokenizer.py  tran
hw1-part-1/: tokenizer.py  tran
hw1-part2/: all_tokens.txt  alpha.txt  error_log.txt  freq.txt  hard.out  simple.out  spacy-example.py  tokenize.sh  tokenizer  tokenizer.py  tran  uark_26.out
hw2/: lex.yy.c  tokenize.sh  tokenizer.l  tokenizer.py
hw2-files/: main.cpp  makefile  output  run.sh  tran
hw3/: CONFIG  config  lex.yy.c  makefile  output  run.sh  tokenize.sh  tokenizer  tokenizer.l
hw3-part2/: CONFIG  last_30_dict.txt  last_30_map.txt  last_30_post.txt  output  start  tran
hw4-part1/: CONFIG  output  tokenizer
hw4-part2/: CMakeLists.txt  CONFIG  SearchEngine.py  lex.yy.c  output  tran
hw4-part2/Data/: map.data  post.data
hw4-part2/Include/: DictFile.h  PostFile.h
hw4-part2/Output/: arizona_1.out  arizona_10.out  arizona_11.out  arizona_12.out  arizona_14.out  arizona_16.out  arizona_2.out  arizona_20.out  arizona_22.out  arizona_25.out  arizona_28.out  arizona_3.out  arizona_30.out  arizona_4.out  arizona_5.out  arizona_8.out  brown_1.out  brown_11.out  brown_12.out  brown_14.out  brown_15.out  brown_16.out  brown_18.out  brown_19.out  brown_2.out  brown_20.out  brown_21.out  brown_23.out  brown_24.out  brown_25.out  brown_27.out  brown_29.out  brown_3.out  brown_30.out  brown_5.out  brown_6.out  brown_7.out  brown_8.out  brown_9.out  bu_1.out  (+983 more)
hw4-part2/src/: DictFile.cpp  InvertedFile.cpp  PostFile.cpp  Utils.cpp  main.cpp
hw5/: CONFIG  SearchEngine.py  dockerfile  main.py  (+1 more)
(+794 files in other folders)
